force-app/src/objects/c2g__codaYear__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpyear</customHelpPage>
    <description>Defines a financial year.</description>
    <fields>
        <fullName>c2g__AdjustmentStatus__c</fullName>
        <label>Adjustment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjusted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Not Adjusted</fullName>
                    <default>true</default>
                    <label>Not Adjusted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AutomaticPeriodList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Period List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__NumberOfPeriods__c</fullName>
        <label>Number of Periods</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Years</relationshipLabel>
        <relationshipName>Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodCalculationBasis__c</fullName>
        <label>Period Calculation Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Month End</fullName>
                    <default>true</default>
                    <label>Month End</label>
                </value>
                <value>
                    <fullName>445</fullName>
                </value>
                <value>
                    <fullName>454</fullName>
                </value>
                <value>
                    <fullName>544</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__RetainedEarningsGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Earnings GLA</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Years (Retained Earnings GLA)</relationshipLabel>
        <relationshipName>RetainedEarningsGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__SuspenseGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspense GLA</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Years</relationshipLabel>
        <relationshipName>Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndDate__c</fullName>
        <label>Year End Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndMode__c</fullName>
        <label>Year End Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Accounting Code</fullName>
                </value>
                <value>
                    <fullName>GLA Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__YearEndUser__c</fullName>
        <externalId>true</externalId>
        <label>Year End User</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Year</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaYear</fullName>
        <columns>NAME</columns>
        <columns>c2g__StartDate__c</columns>
        <columns>c2g__EndDate__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__RetainedEarningsGLA__c</columns>
        <columns>c2g__SuspenseGLA__c</columns>
        <columns>c2g__YearEndDate__c</columns>
        <columns>c2g__AdjustmentStatus__c</columns>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaYear</fullName>
        <columns>NAME</columns>
        <columns>c2g__StartDate__c</columns>
        <columns>c2g__EndDate__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__RetainedEarningsGLA__c</columns>
        <columns>c2g__SuspenseGLA__c</columns>
        <columns>c2g__YearEndDate__c</columns>
        <columns>c2g__AdjustmentStatus__c</columns>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__NumberOfPeriods__c</columns>
        <columns>c2g__StartDate__c</columns>
        <columns>c2g__EndDate__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__PeriodCalculationBasis__c</columns>
        <columns>c2g__YearEndDate__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__AdjustmentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Years</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>